<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Converter"
    android:background="#c874d5e5"
    android:id="@+id/relative">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleImageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/page0"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:contentDescription="Signal to Mars" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="START"
        android:id="@+id/startButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:height="50dp"
        android:allowUndo="true"
        android:background="#c8e46561" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="7"
        android:id="@+id/valueEditText"
        android:hint="Enter a value"
        android:maxLength="10"
        android:textSize="24sp"
        android:textIsSelectable="true"
        android:layout_below="@+id/titleImageView"
        android:layout_alignStart="@+id/titleImageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/titleImageView"
        android:layout_alignEnd="@+id/titleImageView"
        android:textSize="24sp"
        android:layout_alignParentEnd="true"
        android:hint="Results"
        android:layout_toEndOf="@+id/valueEditText"
        android:layout_alignBottom="@+id/valueEditText"
        android:layout_alignBaseline="@+id/valueEditText" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ComboboxFrom"
        android:layout_below="@+id/valueEditText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/valueEditText"
        android:spinnerMode="dropdown"
        android:popupBackground="#c874d5e5" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ComboboxTo"
        android:layout_below="@+id/valueEditText"
        android:spinnerMode="dropdown"
        android:layout_toEndOf="@+id/valueEditText"
        android:popupBackground="#c874d5e5" />
</RelativeLayout>
