package com.sanoshchenko.converter;

import android.support.test.espresso.Espresso;
import android.support.test.espresso.action.AdapterViewProtocol;
import android.support.test.espresso.action.ViewActions;
import android.support.test.espresso.assertion.ViewAssertions;
import android.support.test.espresso.matcher.ViewMatchers;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;

import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.app.PendingIntent.getActivity;
import static android.support.test.espresso.Espresso.*;
import static android.support.test.espresso.action.ViewActions.*;
import static android.support.test.espresso.assertion.ViewAssertions.*;
import static android.support.test.espresso.matcher.RootMatchers.withDecorView;
import static android.support.test.espresso.matcher.ViewMatchers.*;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.containsString;
import static org.hamcrest.Matchers.instanceOf;
import static org.hamcrest.Matchers.is;
import static org.hamcrest.Matchers.not;

@RunWith(AndroidJUnit4.class)
@LargeTest
public class ConverterActivityTest {

    @Rule
    public ActivityTestRule<Converter> mActivityRule = new ActivityTestRule<>(Converter.class);

    @Test
    public void testUahToUah() {
        onView(withId(R.id.valueEditText))
                .perform(typeText("100"));

        onView(withId(R.id.startButton))
                .perform(click());

        onView(withId(R.id.textView))
                .check(
                        matches(withText("100.0")));

    }

    @Test
    public void testUahToUSD() {
        onView(withId(R.id.valueEditText))
                .perform(typeText("100"));

        onView(withId(R.id.ComboboxTo)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("USD"))).perform(click());
        onView(withId(R.id.startButton))
                .perform(click());

        onView(withId(R.id.textView))
                .check(
                        matches(withText("4.2")));

    }


    @Test
    public void testUahToEUR() {
        onView(withId(R.id.valueEditText))
                .perform(typeText("10"));

        onView(withId(R.id.ComboboxTo)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("EUR"))).perform(click());

        onView(withId(R.id.startButton))
                .perform(click());

        onView(withId(R.id.textView))
                .check(
                        matches(withText("0.39")));

    }

    @Test
    public void testUahToRUB() {
        onView(withId(R.id.valueEditText))
                .perform(typeText("10000"));

        onView(withId(R.id.ComboboxTo)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("RUB"))).perform(click());
        onView(withId(R.id.startButton))
                .perform(click());

        onView(withId(R.id.textView))
                .check(
                        matches(withText("30000.0")));

    }

    @Test
    public void testUahToGBP() {
        onView(withId(R.id.valueEditText))
                .perform(typeText("100"));

        onView(withId(R.id.ComboboxTo)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("GBP"))).perform(click());

        onView(withId(R.id.startButton)).perform(click());

        onView(withId(R.id.textView))
                .check(
                        matches(withText("3.0")));

    }

    @Test
    public void testZeroInput() {

        onData(withText("Please input a number")).check(matches(isDisplayed()));
       // onView(withHint("Enter a value")).check(doesNotExist());
        onView(withId(R.id.startButton))
                .perform(click());
        //onView(withId(R.id.relative)).check(matches(withText("Please input a number")));
       // onView(withText("Please input a number")).inRoot(withDecorView(not(is(getActivity().getWindow().getDecorView())))).check(matches(isDisplayed()));

    }
}
